ocp-demo-app/ocp/service-ocp-demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ocp-demo-app
  name: ocp-demo-app
  namespace: sumit-gupta-redhat-code
spec:
  clusterIP: 172.30.115.91
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: ocp-demo-app
  sessionAffinity: None
  type: ClusterIP
